tests/NormalTests/paczka1/fuzzy1/99897952.err
Error in line 2: YN9LjfjS S635 37,0
Error in line 11: A166 S978 8,0
